--- a/public/css/style.css
+++ b/public/css/style.css
@@ -412,7 +412,7 @@ room h4 {
     position: absolute;
     bottom: 1em;
     left: 1em;
-    background-color: #333;
+    background-color: #111;
     color: #eef;
     border-radius: 50%;
     width: 55px;
@@ -420,6 +420,7 @@ room h4 {
     display: flex;
     align-items: center;
     justify-content: center;
+    border: solid 2px #FFF;
 }
 
 .color-picker i {
@@ -450,14 +451,14 @@ room h4 {
 
 .color-container {
     position: absolute;
-    background-color: rgba(51, 51, 51, .3);
+    background-color: #333;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-between;
     width: 100%;
     height: 400px;
-    bottom: 70px;
+    bottom: 90px;
 }
 
 .color-btn {
@@ -476,7 +477,7 @@ room h4 {
     height: 81px;
     left: -8px;
     top: -8px;
-    border: 3px solid #444;
+    border: 8px solid #444;
     border-radius: 50%;
 }
 
